Firefox maintains v4l device files open after end of video session
Categories
(Core :: WebRTC: Audio/Video, defect, P2)
Tracking
()
People
(Reporter: cJ-mozilla, Assigned: jib, NeedInfo)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
User Agent: Mozilla/5.0 (Windows NT 10.0; rv:76.0) Gecko/20100101 Firefox/76.0
Steps to reproduce:
- Start Firefox
- Use camera (eg. https://mozilla.github.io/webrtc-landing/gum_test.html)
- Stop using camera
- for x in $(pidof firefox); do ls -lA /proc/${x}/fd ; done | grep video
Actual results:
Open file descriptors for /dev/video* files
This is an annoyance as it prevents drivers from being unloaded.
Expected results:
No open file descriptor
Comment 1•4 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::WebRTC: Audio/Video' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.
Comment 2•4 years ago
|
||
Marking this P3/S3 because of the annoyance factor, but it is possible there is a more serious problem here. jib?
| Assignee | ||
Comment 3•4 years ago
|
||
Hi Jérôme, thanks for reporting! Would you be able to confirm that it worked in Firefox 77?
I suspect this regressed in bug 1637319 here.
This would mean it broke in Firefox 78 and worked fine in Firefox 77. Unfortunately, I don't have a linux box to check with.
Updated•4 years ago
|
| Assignee | ||
Comment 4•4 years ago
|
||
Updated•4 years ago
|
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Updated•4 years ago
|
| Reporter | ||
Comment 6•4 years ago
|
||
Hi Jan-Ivar,
You're right, I tested by installing a Firefox 77 from FlatPak hub:
$ flatpak update --user --commit=74e086c686d4ef166eb55bbf0eac72735235072b04711c6d350242a07a9190e7 org.mozilla.firefox # 77
and the problem did not appear.
And then when I installed a 78-ish in the same way:
$ flatpak update --user --commit=dd97c9d605553f7ea44726e9c6beb4ee8cc821ee0df7c235e01a587e93a92c49 org.mozilla.firefox # 78.0.1
and the problem was there.
Comment 7•4 years ago
|
||
| bugherder | ||
Updated•4 years ago
|
| Reporter | ||
Comment 8•4 years ago
|
||
FYI I just ran Nightly "89.0a1 (2021-04-02) (64-bit)" and the problem is still there; I'm not familiar enough with Firefox's CI to know if it picked up the commit.
| Reporter | ||
Comment 9•4 years ago
|
||
My bad. I confirm the problem is fixed. I had another firefox 87 running...
Updated•4 years ago
|
Comment 10•4 years ago
|
||
The patch landed in nightly and beta is affected.
:jib, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.
For more information, please visit auto_nag documentation.
| Assignee | ||
Updated•4 years ago
|
Updated•4 years ago
|
Updated•4 years ago
|
Comment 11•4 years ago
|
||
I'm trying to reproduce the issue following the mentioned steps but I'm having trouble getting to the described result. Can you please provide more information? On step 4, do I need to run that command in terminal, could you please be more specific?
Description
•