Bug 1701809: Close dev/video* driver file descriptors after camera access on linux. r=ng

Differential Revision: https://phabricator.services.mozilla.com/D110589